--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -16,7 +16,7 @@ RUN chown -R  jenkins:jenkins /var/log/jenkins
 # set user to jenkins
 USER jenkins
 
-# set some environment variables - 8 GB memory pool & increasing connection pool
+# set some environment variables
 ENV JAVA_OPTS="-Xmx8192m"
 ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
 #--handlerCountStartup=100 --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log
@@ -25,3 +25,9 @@ ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/je
 RUN rm /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
 COPY init.groovy /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
 COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
+
+# install default plugins
+COPY plugins.txt /tmp/plugins.txt
+RUN chmod +x /tmp/plugins.txt
+RUN chmod +x /usr/local/bin/plugins.sh 
+RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
