--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -28,7 +28,7 @@ COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
 
 # install default plugins
 COPY plugins.txt /tmp/plugins.txt
-RUN chmod +x /tmp/plugins.txt
+RUN chmod +r /tmp/plugins.txt
 RUN chmod +x /usr/local/bin/plugins.sh 
 RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
 
