--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -27,9 +27,9 @@ COPY init.groovy /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groov
 COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
 
 # install default plugins
-COPY plugins.txt /tmp/plugins.txt
+# COPY plugins.txt /tmp/plugins.txt
 # RUN chmod +x /usr/local/bin/install-plugins.sh
-RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
+RUN /usr/local/bin/install-plugins.sh $(cat /usr/dockerize-jenkins/jenkins-master/plugins.txt | tr '\n' ' ')
 
 # Tini as the entry point to manage zombie processes
 ENTRYPOINT ["/bin/tini", "--", "/usr/local/bin/jenkins.sh"]
