--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -28,8 +28,8 @@ COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
 
 # install default plugins
 # COPY plugins.txt /tmp/plugins.txt
-# RUN chmod +x /usr/local/bin/install-plugins.sh
-# RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
+RUN chmod +x /usr/local/bin/install-plugins.sh
+RUN /usr/local/bin/install-plugins.sh artifactory:latest # $(cat /tmp/plugins.txt | tr '\n' ' ')
 
 # Tini as the entry point to manage zombie processes
 ENTRYPOINT ["/bin/tini", "--", "/usr/local/bin/jenkins.sh"]
