--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -25,7 +25,7 @@ ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/je
 RUN rm /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
 # COPY master-slave.groovy /usr/share/jenkins/ref/init.groovy.d/slave-to-master-security-kill-switch.groovy
 COPY init.groovy /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
-# COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
+COPY setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
 
 # install default plugins
 COPY plugins.txt /tmp/plugins.txt
