--- a/jenkins-data/Dockerfile
+++ b/jenkins-data/Dockerfile
@@ -9,6 +9,10 @@ RUN useradd -d "/var/jenkins_home" -u 1000 -m -s /bin/bash jenkins
 RUN mkdir -p /var/log/jenkins
 RUN chown -R jenkins:jenkins /var/log/jenkins
 
+# add in jobs
+RUN rm -r /var/jenkins_home/jobs
+COPY ./jobs/ /var/jenkins_home
+
 # make log folder a mount
 VOLUME ["/var/log/jenkins", "/var/jenkins_home"]
 
