--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -21,11 +21,14 @@ ENV JAVA_OPTS="-Xmx8192m"
 ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
 #--handlerCountStartup=100 --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log
 
-# createa groovy hook scripts
+# create groovy hook scripts
 RUN rm /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
 COPY config/master-slave.groovy /usr/share/jenkins/ref/init.groovy.d/slave-to-master-security-kill-switch.groovy
 COPY config/init.groovy /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
 COPY config/setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.groovy
+
+# add seed job folder into home directory for use by jenkins
+COPY seed-job /var/jenkins_home/jobs
 
 # install default plugins
 COPY plugins.txt /tmp/plugins.txt
