--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 data:
-  build: . ~/jenkins-data
+  build: ~/dockerize-jenkins/jenkins-data
 
 master:
-  build: . ~/jenkins-master
+  build: ~/dockerize-jenkins/jenkins-master
   volumes_from:
     - data
   ports:
     - "50000:50000"
 
 nginx:
-  build: . ~/jenkins-nginx
+  build: . ~/dockerize-jenkins/jenkins-nginx
   ports:
     - "80:80"
   links:
     - master:jenkins-master
 
 slave:
-  build: . ~/jenkins-slave
+  build: . ~/dockerize-jenkins/jenkins-slave
