--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -37,6 +37,13 @@ RUN echo "jenkins  ALL=(ALL)  ALL" >> etc/sudoers
 # set name servers
 COPY /files/resolv.conf /etc/resolv.conf
 
+#!/bin/bash
+
+# generate ssh key pair and move to authorized_keys
+RUN cd ./jenkins-slave/files &&\
+    ssh-keygen -t rsa -b 4096 -P "passphrase" -f "./id_rsa" -q &&\
+    mv -f id_rsa.pub authorized_keys
+
 # expose ssh port 22 and run ssh server
 EXPOSE 22
 CMD ["/usr/sbin/sshd","-D"]
