--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -40,8 +40,7 @@ COPY /files/resolv.conf /etc/resolv.conf
 #!/bin/bash
 
 # generate ssh key pair and move to authorized_keys
-RUN cd ./jenkins-slave/files &&\
-    ssh-keygen -t rsa -b 4096 -P "passphrase" -f "./id_rsa" -q &&\
+RUN ssh-keygen -t rsa -b 4096 -P "passphrase" -f "./id_rsa" -q &&\
     mv -f id_rsa.pub authorized_keys
 
 # expose ssh port 22 and run ssh server
