--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -32,5 +32,8 @@ COPY plugins.txt /tmp/plugins.txt
 # RUN chmod +x /usr/local/bin/install-plugins.sh
 RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
 
+# copy seed job dsl script(s)
+COPY dsl/*.groovy /usr/share/jenkins/ref/jobs/SeedJob/workspace/
+
 # Tini as the entry point to manage zombie processes
 ENTRYPOINT ["/bin/tini", "--", "/usr/local/bin/jenkins.sh"]
