--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -17,8 +17,8 @@ MAINTAINER adam.j.yura
 USER jenkins
 
 # set some environment variables
-ENV JAVA_OPTS="-Xmx8192m"
-ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
+# ENV JAVA_OPTS="-Xmx8192m"
+# ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
 #--handlerCountStartup=100 --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log
 
 # create groovy hook scripts
