--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -2,9 +2,9 @@ FROM jenkins:latest
 
 MAINTAINER adam.j.yura
 
+# REMOVE ALL COMMENTED COMMANDS FOR DOCKER-COMPOSE FUNCTIONALITY
 # elevate priveleges
-# USER root
-
+# USER root 
 # set a log folder
 # RUN mkdir /var/log/jenkins
 # set a cache folder
@@ -13,13 +13,12 @@ MAINTAINER adam.j.yura
 # RUN chown -R  jenkins:jenkins /var/cache/jenkins
 # enable jenkins to write to log folder
 # RUN chown -R  jenkins:jenkins /var/log/jenkins
-# set user to jenkins
+# set user to jenkins  
 USER jenkins
 
 # set some environment variables
 # ENV JAVA_OPTS="-Xmx8192m"
-ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
-#--handlerCountStartup=100 --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log
+# ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
 
 # create groovy hook scripts
 RUN rm /usr/share/jenkins/ref/init.groovy.d/tcp-slave-agent-port.groovy
@@ -29,7 +28,6 @@ COPY config/setup-users.groovy /usr/share/jenkins/ref/init.groovy.d/setup-users.
 
 # install default plugins
 COPY plugins.txt /tmp/plugins.txt
-# RUN chmod +x /usr/local/bin/install-plugins.sh
 RUN /usr/local/bin/install-plugins.sh $(cat /tmp/plugins.txt | tr '\n' ' ')
 
 # copy seed job dsl script(s) - may be handled by mounting host volume containing job data
